--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,22 @@
 
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&display=swap');
+
+.fragment-mono-regular {
+  font-family: "Fragment Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.fragment-mono-regular-italic {
+  font-family: "Fragment Mono", monospace;
+  font-weight: 400;
+  font-style: italic;
+}
+
 .reddit-sans-weather {
   font-family: "Reddit Sans", sans-serif;
   font-optical-sizing: auto;
@@ -35,12 +51,17 @@
   font-style: normal;
 }
 
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
 html {
   line-height: normal;
   font-size: 20px;
-  font-family: Reddit Sans, Bahnschrift, 'DIN Alternate', 'Franklin Gothic Medium', 'Nimbus Sans Narrow', sans-serif-condensed, sans-serif;
-  font-weight: normal;
+  font-family: Fragment Mono, Poppins, Reddit Sans, Bahnschrift, 'DIN Alternate', 'Franklin Gothic Medium', 'Nimbus Sans Narrow', sans-serif-condensed, sans-serif;
+  font-weight: 900;
 }
 
 h1,
@@ -70,15 +91,14 @@ body {
 .primary {
   display: grid;
   grid-template-columns: 33.33% 1fr 33.33%;
-  grid-template-rows: min-content min-content 50% min-content 20%;
+  grid-template-rows: min-content min-content min-content 1fr;
   align-items: center;
   justify-items: center;
-
-  height: max-content;
-
-  max-width: 700px;
+  height: 100%;
+  max-width: max-content;
   margin: 24px auto;
   padding: 12px;
+  white-space: nowrap;
 
   .location {
     grid-row: 1 / 2;
@@ -86,6 +106,12 @@ body {
     justify-self: start;
     align-self: center;
     margin-bottom: 12px;
+    margin-right: 64px;
+
+    h3 {
+      font-size: 1.4rem;
+    }
+
 
     gap: 6px;
     display: flex;
@@ -185,38 +211,13 @@ body {
     filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.7));
   }
 
-  .forecast-temps {
-    display: flex;
-    justify-content: space-around;
-    font-size: 0.8rem;
+  .temp-chart {
+    position: relative;
     grid-row: 4 / 5;
     grid-column: 1 / 4;
     width: 100%;
-  }
-
-  .temp-chart {
-    position: relative;
-    grid-row: 5 / 6;
-    grid-column: 1 / 4;
-    width: 100%;
     height: 100%;
-    clip-path: inset(0 0);
-    border-left: 1px solid rgba(255, 255, 255, 0.4);
-    border-right: 1px solid rgba(255, 255, 255, 0.2);
   }
-
-  .forecast-times {
-    display: flex;
-    justify-content: space-around;
-    font-size: 0.9rem;
-    grid-row: 6 / 7;
-    grid-column: 1 / 4;
-    width: 100%;
-  }
-}
-
-h3 {
-  font-size: 1.8rem;
 }
 
 
@@ -248,38 +249,40 @@ li {
   list-style-type: none;
 }
 
-.forecast {
-  position: absolute;
-  top: -20px;
+.graph {
+  position: relative;
+  z-index: 1;
   display: flex;
-  height: 200%;
+  height: 90px;
   width: 100%;
+  border-bottom: 1rem solid #f5b952;
   /* background-color: white; */
   /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, white); */
   /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, white 60%); */
   /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, white 60%); */
   /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, #000000 80%); */
+  border-radius: 15px;
+  filter: drop-shadow(2px 3px 3px rgba(0, 0, 0, 0.5));
 }
 
 
-.forecast>li {
+.graph>li {
   background-color: #f5b952;
   /* background: linear-gradient(#f5b952 60%, var(--clear-sky) 70%); */
   width: 100%;
-  clip-path: polygon(0 100%,
-      -1px calc(100% - var(--previous-value)),
-      calc(100% + 1px) calc(100% - var(--value)),
-      100% 100%);
-  stroke: rgb(153 51 102 / 1);
-  padding: 0;
-  margin: 0;
-
+  clip-path: polygon(0% 100%,
+      -2px calc(100% - var(--previous-value)),
+      calc(100% + 1px) calc(calc(100% + 0.4px) - var(--value)),
+      calc(100% + 1px) 100%);
 }
 
-.forecast.outline {
-  top: -23px;
+.graph.outline {
+  z-index: 0;
+  position: absolute;
+  bottom: 3px;
+  border-bottom: 1rem solid black;
 }
 
-.forecast.outline>li {
+.graph.outline>li {
   background-color: #000000;
 }
