--- a/src/style.css
+++ b/src/style.css
@@ -217,6 +217,8 @@ body {
     grid-column: 1 / 4;
     width: 100%;
     height: 100%;
+    mix-blend-mode: multiply;
+    opacity: 70%;
   }
 }
 
@@ -250,12 +252,16 @@ li {
 }
 
 .graph {
+  --graph-color: #ace8ff;
+  --graph-outline-color: #89b2ff;
+
   position: relative;
   z-index: 1;
   display: flex;
   height: 90px;
   width: 100%;
-  border-bottom: 1rem solid #f5b952;
+  border-bottom: 1rem solid var(--graph-color);
+  ;
   /* background-color: white; */
   /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, white); */
   /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, white 60%); */
@@ -267,7 +273,7 @@ li {
 
 
 .graph>li {
-  background-color: #f5b952;
+  background-color: var(--graph-color);
   /* background: linear-gradient(#f5b952 60%, var(--clear-sky) 70%); */
   width: 100%;
   clip-path: polygon(0% 100%,
@@ -280,9 +286,9 @@ li {
   z-index: 0;
   position: absolute;
   bottom: 3px;
-  border-bottom: 1rem solid black;
+  border-bottom: 1rem solid var(--graph-outline-color);
 }
 
 .graph.outline>li {
-  background-color: #000000;
+  background-color: var(--graph-outline-color);
 }
