--- a/src/style.css
+++ b/src/style.css
@@ -153,7 +153,6 @@ body {
     grid-row: 3 / 4;
     grid-column: 1 / 2;
     position: relative;
-
     font-size: 7rem;
 
     .degree-symbol {
@@ -211,14 +210,12 @@ body {
     filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.7));
   }
 
-  .temp-chart {
+  .hourly-forecast {
     position: relative;
     grid-row: 4 / 5;
     grid-column: 1 / 4;
     width: 100%;
     height: 100%;
-    mix-blend-mode: multiply;
-    opacity: 70%;
   }
 }
 
@@ -261,14 +258,8 @@ li {
   height: 90px;
   width: 100%;
   border-bottom: 1rem solid var(--graph-color);
-  ;
-  /* background-color: white; */
-  /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, white); */
-  /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, white 60%); */
-  /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, white 60%); */
-  /* background: linear-gradient(rgba(255, 255, 255, 0) 20%, #000000 80%); */
   border-radius: 15px;
-  filter: drop-shadow(2px 3px 3px rgba(0, 0, 0, 0.5));
+  filter: drop-shadow(2px 3px 3px rgba(0, 0, 0, 0.5)) drop-shadow(0px -4px 0px var(--graph-outline-color));
 }
 
 
@@ -282,13 +273,29 @@ li {
       calc(100% + 1px) 100%);
 }
 
-.graph.outline {
-  z-index: 0;
-  position: absolute;
-  bottom: 3px;
-  border-bottom: 1rem solid var(--graph-outline-color);
+.graph-container {
+  mix-blend-mode: multiply;
+  opacity: 70%;
 }
 
-.graph.outline>li {
-  background-color: var(--graph-outline-color);
+.label-list {
+  position: absolute;
+  z-index: 3;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  height: calc(100% - 1rem);
+  top: 50%;
+
+  .label {
+    position: relative;
+    bottom: var(--normalized-value);
+    font-size: 0.8rem;
+  }
+
+  .label::after {
+    position: absolute;
+    content: "°";
+  }
 }
