--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
   --dark: black;
 
   --bg-1: #2d07ff;
-  --bg-2: #596bfc;
+  --bg-2: #7785f0;
 
 
   --clear-sky: #669ed6;
@@ -59,7 +59,7 @@ button {
 body {
   background-color: var(--french-sky);
   color: var(--light);
-  background: linear-gradient(var(--bg-1), var(--bg-2));
+  background: linear-gradient(var(--bg-1)30%, var(--bg-2) 100%);
   background-repeat: space;
   background-attachment: scroll;
   background-size: 100%;
@@ -157,13 +157,58 @@ body {
   align-items: center;
   justify-content: space-between;
 
+  .location-input {
+    margin-right: auto;
+    margin-left: 12px;
+    position: relative;
+
+    >input {
+      width: 71%;
+      padding: 0px 3px;
+      font-family: inherit;
+      font-size: 1rem;
+      margin-bottom: 12px;
+      margin-left: 6px;
+    }
+
+    font-size: 1rem;
+
+    >label {
+      position: absolute;
+      clip: rect(0, 0, 0, 0);
+    }
+
+    .location-search-button {
+      border: 1px solid white;
+      padding: 2px;
+      width: 32px;
+      border-radius: 4px;
+      color: black;
+      padding: 0 2px;
+      background-color: white;
+    }
+  }
+
   .location {
     align-items: center;
     cursor: pointer;
 
     .location-text {
-      text-decoration: underline;
       margin-left: 6px;
+      font-size: 1.5rem;
+    }
+  }
+
+  .day-time {
+    text-align: right;
+
+    .date {
+      font-size: 1.4rem;
+      margin-bottom: 6px;
+    }
+
+    .time {
+      font-size: 1.8rem;
     }
   }
 }
@@ -199,22 +244,50 @@ body {
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
     padding: 3px 7px 3px 6px;
+    container-type: inline-size;
   }
 
   .forecast-high {
-    font-size: 2rem;
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     place-self: start;
   }
 
   .forecast-low {
-    font-size: 1.5rem;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     place-self: end right;
     text-align: right;
   }
+
+  .forecast-high,
+  .forecast-low {
+    font-size: 2rem;
+  }
+
+  @container (min-width: 80px) {
+
+    .forecast-high {
+      font-size: 3.1rem;
+    }
+
+    .forecast-low {
+      font-size: 2.8rem;
+    }
+  }
+
+  @container (min-width: 120px) {
+
+    .forecast-high {
+      font-size: 4rem;
+    }
+
+    .forecast-low {
+      font-size: 3rem;
+    }
+  }
+
+
 }
 
 .forecast-descriptions {
@@ -306,6 +379,34 @@ li {
   .label::after {
     position: absolute;
     content: "°";
+  }
+}
+
+.logo {
+  height: 73px;
+  width: 125px;
+  margin: 6px;
+  position: relative;
+  background-image: linear-gradient(var(--bg-1), var(--bg-2));
+  border-radius: 16px;
+  border: 4px solid white;
+  box-shadow: 0px 0px 0px 1px black, 0px 0px 0px 1px black inset;
+  text-shadow: none;
+  text-align: center;
+  user-select: none;
+
+  .logo-text {
+    position: absolute;
+    left: 3px;
+    bottom: 2px;
+    font-size: 3rem;
+    font-weight: 900;
+    line-height: 40%;
+    text-shadow: 3px 3px 2px rgb(138, 138, 138);
+
+    >span {
+      font-size: 1.4rem;
+    }
   }
 }
 
