--- a/src/style.css
+++ b/src/style.css
@@ -350,23 +350,28 @@ li {
   height: 90px;
   width: 100%;
   border-bottom: 1rem solid var(--graph-color);
+  padding-top: 0.5rem;
   filter: drop-shadow(0px -5px 0px var(--graph-outline-color));
 }
 
 .time-labels {
   margin-top: 6px;
   position: relative;
-  justify-content: space-between;
+  justify-content: space-around;
+
+  .hidden {
+    visibility: hidden;
+  }
 }
 
 .graph>li {
   background-color: var(--graph-color);
   /* background: linear-gradient(#f5b952 60%, var(--clear-sky) 70%); */
   width: 100%;
-  clip-path: polygon(0% 100%,
-      -2px calc(100% - var(--previous-value)),
-      calc(100% + 1px) calc(calc(100% + 0.4px) - var(--value)),
-      calc(100% + 1px) 100%);
+  clip-path: polygon(-1% 100%,
+      -1% calc(100% - var(--previous-value)),
+      101% calc(100% - var(--value)),
+      101% 100%);
 }
 
 
@@ -374,20 +379,26 @@ li {
   position: absolute;
   z-index: 3;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: flex-start;
   width: 100%;
-  height: calc(100% - 1rem);
-  top: 60%;
+  height: calc(100% - 1.5rem);
+  top: 50%;
 
   .label {
     position: relative;
     bottom: var(--normalized-value);
-    font-size: 0.8rem;
+    font-size: 0.9rem;
+  }
+
+  .hidden {
+    /* display: none; */
+    visibility: hidden;
   }
 
   .label::after {
     position: absolute;
+    top: 2px;
     content: "°";
   }
 }
