--- a/src/style.css
+++ b/src/style.css
@@ -171,7 +171,6 @@ body {
   --weather-icon: clear-day;
   height: 5rem;
   aspect-ratio: 1 / 1;
-  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.7));
 }
 
 .conditions-table {
@@ -409,8 +408,9 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.icon {
-  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.8));
+.icon,
+.visual {
+  filter: drop-shadow(0px 0px 3px rgba(255, 255, 255, 0.6)) drop-shadow(0px 0px 12px rgba(255, 255, 255, 0.3));
 }
 
 li {
@@ -448,8 +448,9 @@ li {
   justify-content: space-around;
 
   .hidden {
-    visibility: hidden;
+    display: none;
   }
+
 }
 
 .graph>li {
@@ -480,8 +481,7 @@ li {
   }
 
   .hidden {
-    /* display: none; */
-    visibility: hidden;
+    display: none;
   }
 
   .label::after {
