--- a/src/style.css
+++ b/src/style.css
@@ -433,12 +433,20 @@ li {
 .graph {
   --graph-color: #ffe07c;
   --graph-outline-color: #ff9e20;
+}
+
+.precip {
+  --graph-color: #7cc0ff;
+  --graph-outline-color: #2088ff;
+}
+
+.graph {
   position: relative;
   z-index: 1;
   display: flex;
   height: 90px;
   width: 100%;
-  border-bottom: 1rem solid var(--graph-color);
+  border-bottom: 0.5rem solid var(--graph-color);
   padding-top: 0.5rem;
   filter: drop-shadow(0px -5px 0px var(--graph-outline-color));
 }
@@ -455,6 +463,7 @@ li {
 }
 
 .graph>li {
+  position: relative;
   background-color: var(--graph-color);
   /* background: linear-gradient(#f5b952 60%, var(--clear-sky) 70%); */
   width: 100%;
@@ -462,6 +471,8 @@ li {
       -1% calc(100% - var(--previous-value)),
       101% calc(100% - var(--value)),
       101% 100%);
+  left: 0.3px;
+  margin-left: -0.3px;
 }
 
 
@@ -472,7 +483,7 @@ li {
   justify-content: space-around;
   align-items: flex-start;
   width: 100%;
-  height: calc(100% - 1.5rem);
+  height: calc(100% - 1rem);
   top: 50%;
 
   .label {
@@ -485,7 +496,7 @@ li {
     display: none;
   }
 
-  .label::after {
+  .label:not(.precip)::after {
     position: relative;
     top: 2px;
     left: 2px;
