--- a/src/style.css
+++ b/src/style.css
@@ -57,10 +57,8 @@ body {
   background-color: var(--french-sky);
   color: white;
   background: linear-gradient(var(--bg-1)30%, var(--bg-2) 100%);
-  background-repeat: space;
-  background-attachment: scroll;
-  background-size: 100%;
-  height: 100vh;
+  background-size: cover;
+  min-height: 100vh;
 }
 
 .current-conditions {
