--- a/src/style.css
+++ b/src/style.css
@@ -139,27 +139,29 @@ body {
   }
 }
 
-.current-temp::after {
+.current-temp::before {
   position: absolute;
   content: "°";
   font-size: 3rem;
-  top: 10px
+  top: 10px;
+  right: -20px;
 }
 
-.current-temp.fahrenheit::before {
+.current-temp::after {
+  position: absolute;
+  font-size: 2rem;
+  right: -41px;
+  top: 10px;
+}
+
+.current-temp.fahrenheit::after {
   position: absolute;
   content: "F";
-  font-size: 2rem;
-  top: 10px;
-  right: -59%;
 }
 
-.current-temp.celsius::before {
+.current-temp.celsius::after {
   position: absolute;
   content: "C";
-  font-size: 2rem;
-  top: 10px;
-  right: -58%;
 }
 
 .visual {
@@ -210,30 +212,34 @@ body {
     margin-left: 12px;
     position: relative;
 
-    >input {
-      width: 71%;
-      padding: 0px 3px;
+    form {
       font-family: inherit;
+
+      #location-search {
+        border: 1px solid white;
+        width: 72%;
+        padding: 2px 3px;
+        font-size: 1rem;
+        margin-left: 6px;
+      }
+
       font-size: 1rem;
+
+      >label {
+        position: absolute;
+        clip: rect(0, 0, 0, 0);
+      }
+
+      .location-search-button {
+        border: 1px solid white;
+        width: 32px;
+        border-radius: 4px;
+        color: black;
+        background-color: white;
+      }
+
       margin-bottom: 12px;
-      margin-left: 6px;
-    }
-
-    font-size: 1rem;
-
-    >label {
-      position: absolute;
-      clip: rect(0, 0, 0, 0);
-    }
-
-    .location-search-button {
-      border: 1px solid white;
-      padding: 2px;
-      width: 32px;
-      border-radius: 4px;
-      color: black;
-      padding: 0 2px;
-      background-color: white;
+      gap: 6px;
     }
   }
 
